@@ -12,6 +12,7 @@ Fixes an issue where Prime Video overlays/collections would not be built when th
 
 # Bug Fixes
 Fixed the `cast` search option for the `imdb_search` builder
+Fixed an issue where season-level overlays would not work if the season had no image and the show-level image already had an overlay. As a result, episode overlays will now apply before season overlays, and season overlays will now apply before show overlays.
 Fixes #2258 `imdb_list` sort was not being parsed correctly
 Fixes `letterboxd_list` rating filter to use a 1-10 rating vs 1-100 to reflect how letterboxd ratings work on their website
 Fixed the `ids_to_anidb` lookup for anime movies and shows
